--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .border-gradient {
+  borderimage: linear-gradient(
+    180deg,
+    rgba(0, 112, 60, 0.4) 0%,
+    rgba(0, 92, 183, 0.4) 100%
+  );
+} */
