--- a/src/Ui/styles.css
+++ b/src/Ui/styles.css
@@ -8,3 +8,69 @@
   width: 100%;
   height: auto;
 }
+
+/* styles.css */
+
+/*  */
+.wheel {
+  border: 1px solid #005cb7;
+  position: absolute;
+  border-radius: 50%;
+  margin-left: 10%;
+
+  width: 80%;
+  height: 78%;
+
+  animation-name: rotate;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+.cabin {
+  width: 15%;
+  height: 15%;
+  margin: 0 auto;
+  position: absolute;
+  transform-origin: 50% 0%;
+  animation: cabins 10s ease-in-out infinite;
+  font-size: 35.2px;
+}
+
+.cabin:nth-of-type(1) {
+  right: -15.5%;
+  top: 50%;
+}
+.cabin:nth-of-type(2) {
+  right: 17%;
+  top: 97.5%;
+}
+.cabin:nth-of-type(3) {
+  right: 67%;
+  top: 97%;
+}
+.cabin:nth-of-type(4) {
+  left: -16%;
+  top: 50%;
+}
+.cabin:nth-of-type(5) {
+  left: 17%;
+  top: -9%;
+}
+.cabin:nth-of-type(6) {
+  right: 17%;
+  top: -12%;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@media (max-width: 450px) {
+  .cabin {
+    font-size: 35px;
+  }
+}
