--- a/src/Ui/styles.css
+++ b/src/Ui/styles.css
@@ -61,7 +61,7 @@
   top: -12%;
 }
 
-@keyframes rotate {
+@keyframes wheel {
   0% {
     transform: rotate(0deg);
   }
@@ -69,8 +69,13 @@
     transform: rotate(360deg);
   }
 }
+
 @media (max-width: 450px) {
   .cabin {
     font-size: 35px;
   }
+}
+
+.slick-dots {
+  font-size: 2rem;
 }
