--- a/src/Ui/styles.css
+++ b/src/Ui/styles.css
@@ -13,7 +13,7 @@
 
 /*  */
 .wheel {
-  border: 1px solid #005cb7;
+  border: 1px solid rgba(103, 105, 110, 0.3);
   position: absolute;
   border-radius: 50%;
   margin-left: 10%;
@@ -21,8 +21,8 @@
   width: 80%;
   height: 78%;
 
-  animation-name: rotate;
-  animation-duration: 6s;
+  animation-name: wheel;
+  animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -37,28 +37,34 @@
 }
 
 .cabin:nth-of-type(1) {
+  font-size: 40px;
   right: -15.5%;
   top: 50%;
 }
 .cabin:nth-of-type(2) {
+  font-size: 37px;
   right: 17%;
-  top: 97.5%;
+  top: 98%;
 }
 .cabin:nth-of-type(3) {
+  font-size: 40px;
   right: 67%;
-  top: 97%;
+  top: 95.5%;
 }
 .cabin:nth-of-type(4) {
-  left: -16%;
+  font-size: 40px;
+  left: -14%;
   top: 50%;
 }
 .cabin:nth-of-type(5) {
-  left: 17%;
-  top: -9%;
+  font-size: 44px;
+  left: 9%;
+  top: -2%;
 }
 .cabin:nth-of-type(6) {
-  right: 17%;
-  top: -12%;
+  font-size: 37px;
+  right: 13%;
+  top: -6%;
 }
 
 @keyframes wheel {
@@ -69,13 +75,100 @@
     transform: rotate(360deg);
   }
 }
+@media (max-width: 900px) {
+  .wheel {
+    width: 80%;
+  }
+  /* html 5*/
+  .cabin:nth-of-type(1) {
+    font-size: 40px;
+    right: -15.5%;
+    top: 50%;
+  }
+  /* css3 */
+  .cabin:nth-of-type(2) {
+    font-size: 32px;
+    right: 15%;
+    top: 97.5%;
+  }
+  /* JS */
+  .cabin:nth-of-type(3) {
+    font-size: 35px;
+    right: 66%;
+    top: 97%;
+  }
+  /* React */
+  .cabin:nth-of-type(4) {
+    font-size: 35px;
+    left: -15%;
+    top: 50%;
+  }
+  /* Tailwind */
+  .cabin:nth-of-type(5) {
+    font-size: 38px;
+    left: 3%;
+    top: 2%;
+  }
+  /* Github */
+  .cabin:nth-of-type(6) {
+    font-size: 35px;
+    right: 8%;
+    top: -4%;
+  }
+}
 
 @media (max-width: 450px) {
+  .wheel {
+    width: 75%;
+    /* margin: 0 auto; */
+  }
   .cabin {
+    width: 40px;
+    height: 40px;
     font-size: 35px;
+    /* border: 2px solid red; */
+  }
+  .cabin:nth-of-type(1) {
+    font-size: 40px;
+    right: -15.5%;
+    top: 50%;
+  }
+  .cabin:nth-of-type(2) {
+    font-size: 32px;
+    right: 15%;
+    top: 97.5%;
+  }
+  .cabin:nth-of-type(3) {
+    font-size: 35px;
+    right: 66%;
+    top: 97%;
+  }
+  .cabin:nth-of-type(4) {
+    font-size: 35px;
+    left: -15%;
+    top: 50%;
+  }
+  .cabin:nth-of-type(5) {
+    font-size: 38px;
+    left: 3%;
+    top: 2%;
+  }
+  .cabin:nth-of-type(6) {
+    font-size: 35px;
+    right: 7%;
+    top: -5%;
   }
 }
 
 .slick-dots {
   font-size: 2rem;
+}
+.logoBg {
+  background-image: url("seun.png");
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  width: 100%;
+  height: 100%;
+  /* border: 2px solid red; */
 }
