--- a/src/Ui/styles.css
+++ b/src/Ui/styles.css
@@ -19,7 +19,7 @@
   margin-left: 10%;
 
   width: 80%;
-  height: 78%;
+  height: 80%;
 
   animation-name: wheel;
   animation-duration: 5s;
@@ -119,8 +119,11 @@
 
 @media (max-width: 450px) {
   .wheel {
-    width: 75%;
-    /* margin: 0 auto; */
+    /* width: 65%; */
+    width: 260px;
+    height: 260px;
+
+    border: none;
   }
   .cabin {
     width: 40px;
@@ -129,34 +132,34 @@
     /* border: 2px solid red; */
   }
   .cabin:nth-of-type(1) {
-    font-size: 40px;
-    right: -15.5%;
+    font-size: 24px;
+    right: -12.5%;
     top: 50%;
   }
   .cabin:nth-of-type(2) {
-    font-size: 32px;
+    font-size: 22px;
     right: 15%;
-    top: 97.5%;
+    top: 94.5%;
   }
   .cabin:nth-of-type(3) {
-    font-size: 35px;
+    font-size: 24px;
     right: 66%;
-    top: 97%;
+    top: 92%;
   }
   .cabin:nth-of-type(4) {
-    font-size: 35px;
-    left: -15%;
+    font-size: 24px;
+    left: -8%;
     top: 50%;
   }
   .cabin:nth-of-type(5) {
-    font-size: 38px;
-    left: 3%;
+    font-size: 24px;
+    left: 18%;
     top: 2%;
   }
   .cabin:nth-of-type(6) {
-    font-size: 35px;
-    right: 7%;
-    top: -5%;
+    font-size: 22px;
+    right: 15%;
+    top: -1%;
   }
 }
 
