--- a/src/Ui/styles.css
+++ b/src/Ui/styles.css
@@ -10,6 +10,10 @@
 }
 
 /* styles.css */
+.active-link {
+  color: #005cb7;
+  text-decoration: underline;
+}
 
 /*  */
 .wheel {
@@ -22,7 +26,7 @@
   height: 80%;
 
   animation-name: wheel;
-  animation-duration: 5s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -32,7 +36,7 @@
   margin: 0 auto;
   position: absolute;
   transform-origin: 50% 0%;
-  animation: cabins 10s ease-in-out infinite;
+  animation: cabins 10s linear infinite;
   font-size: 35.2px;
 }
 
@@ -129,7 +133,6 @@
     width: 40px;
     height: 40px;
     font-size: 35px;
-    /* border: 2px solid red; */
   }
   .cabin:nth-of-type(1) {
     font-size: 24px;
@@ -165,13 +168,4 @@
 
 .slick-dots {
   font-size: 2rem;
-}
-.logoBg {
-  background-image: url("seun.png");
-  /* background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; */
-  width: 100%;
-  height: 100%;
-  /* border: 2px solid red; */
 }
