--- a/src/Ui/styles.css
+++ b/src/Ui/styles.css
@@ -17,58 +17,55 @@
 
 /*  */
 .wheel {
-  border: 1px solid rgba(103, 105, 110, 0.3);
-  position: absolute;
-  border-radius: 50%;
-  margin-left: 10%;
-
-  width: 80%;
-  height: 80%;
-
-  animation-name: wheel;
+  position: relative;
+  width: 400px;
+  height: 400px;
+  margin: 0;
+  margin: 0 auto;
+  border-radius: 1998px;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  animation-name: wheel;
+  /* border: 1px solid rgba(103, 105, 110, 0.3); */
 }
 .cabin {
-  width: 15%;
-  height: 15%;
+  width: 35px;
+  height: 35px;
   margin: 0 auto;
   position: absolute;
   transform-origin: 50% 0%;
   animation: cabins 10s linear infinite;
-  font-size: 35.2px;
+  font-size: 35px;
 }
 
 .cabin:nth-of-type(1) {
-  font-size: 40px;
-  right: -15.5%;
-  top: 50%;
+  right: -1%;
+  top: 46%;
 }
 .cabin:nth-of-type(2) {
-  font-size: 37px;
-  right: 17%;
-  top: 98%;
+  font-size: 31px;
+  right: 14%;
+  top: 82.5%;
 }
 .cabin:nth-of-type(3) {
-  font-size: 40px;
+  font-size: 28px;
   right: 67%;
-  top: 95.5%;
+  top: 88%;
 }
 .cabin:nth-of-type(4) {
-  font-size: 40px;
-  left: -14%;
-  top: 50%;
+  font-size: 31px;
+  left: -1%;
+  top: 46%;
 }
 .cabin:nth-of-type(5) {
-  font-size: 44px;
-  left: 9%;
-  top: -2%;
+  left: 15%;
+  top: 9.5%;
 }
 .cabin:nth-of-type(6) {
-  font-size: 37px;
-  right: 13%;
-  top: -6%;
+  font-size: 30px;
+  right: 21%;
+  top: 5.5%;
 }
 
 @keyframes wheel {
@@ -79,51 +76,51 @@
     transform: rotate(360deg);
   }
 }
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   .wheel {
-    width: 80%;
+    width: 360px;
+    height: 360px;
   }
   /* html 5*/
   .cabin:nth-of-type(1) {
     font-size: 40px;
-    right: -15.5%;
+    right: -16.5%;
     top: 50%;
   }
   /* css3 */
   .cabin:nth-of-type(2) {
     font-size: 32px;
-    right: 15%;
+    right: 10%;
     top: 97.5%;
   }
   /* JS */
   .cabin:nth-of-type(3) {
     font-size: 35px;
-    right: 66%;
-    top: 97%;
+    right: 77%;
+    top: 99%;
   }
   /* React */
   .cabin:nth-of-type(4) {
     font-size: 35px;
-    left: -15%;
+    left: -18%;
     top: 50%;
   }
   /* Tailwind */
   .cabin:nth-of-type(5) {
     font-size: 38px;
-    left: 3%;
+    left: 0%;
     top: 2%;
   }
   /* Github */
   .cabin:nth-of-type(6) {
     font-size: 35px;
-    right: 8%;
+    right: 6%;
     top: -4%;
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
   .wheel {
-    /* width: 65%; */
     width: 260px;
     height: 260px;
 
@@ -135,33 +132,33 @@
     font-size: 35px;
   }
   .cabin:nth-of-type(1) {
-    font-size: 24px;
-    right: -12.5%;
+    font-size: 26px;
+    right: -14.5%;
     top: 50%;
   }
   .cabin:nth-of-type(2) {
     font-size: 22px;
-    right: 15%;
+    right: 12.5%;
     top: 94.5%;
   }
   .cabin:nth-of-type(3) {
-    font-size: 24px;
-    right: 66%;
-    top: 92%;
+    font-size: 22px;
+    right: 67.5%;
+    top: 93%;
   }
   .cabin:nth-of-type(4) {
-    font-size: 24px;
-    left: -8%;
+    font-size: 22px;
+    left: -9%;
     top: 50%;
   }
   .cabin:nth-of-type(5) {
-    font-size: 24px;
-    left: 18%;
-    top: 2%;
+    font-size: 28px;
+    left: 10%;
+    top: 1%;
   }
   .cabin:nth-of-type(6) {
     font-size: 22px;
-    right: 15%;
+    right: 10%;
     top: -1%;
   }
 }
