--- a/src/Ui/styles.css
+++ b/src/Ui/styles.css
@@ -26,6 +26,7 @@
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  animation-delay: 3s;
   animation-name: wheel;
   /* border: 1px solid rgba(103, 105, 110, 0.3); */
 }
